@@ -1,3 +1,6 @@
+*Tue Nov 1 2011 Henri Gavin <.> 0.20100105
+- correction to user-manual.html regarding shear correction factor equations 
+
 *Mon Oct 31 2011 Henri Gavin <.> 0.20100105
 - update user-manual.html regarding shear correction factors and torsion
 constants
